--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
     - 7.0
     - 7.1
     - 7.2
+    - 7.3
     - nightly
 
 env:
@@ -12,10 +13,12 @@ env:
     global:
         - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
 
+cache:
+    directories:
+        - $HOME/.composer/cache/files
+
 before_install:
-    # Update composer
-    - composer self-update
-    - composer clear-cache
+    - composer validate
 
 install:
     - if [[ "$DEPENDENCIES" = 'high' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS; fi
