--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ php:
     - 7.0
     - 7.1
     - 7.2
-    - 7.3
     - nightly
+
+matrix:
+    allow_failures:
+        - php: nightly
+    fast_finish: true
 
 env:
     matrix:
