--- a/box.json.dist
+++ b/box.json.dist
@@ -1,31 +1,25 @@
 {
-    "banner": [
-        "Console phar example project.",
-        "",
-        "(c) Gemorroj",
-        "",
-        "This source file is subject to the MIT license that is bundled",
-        "with this source code in the file LICENSE."
-    ],
+    "banner": flse,
     "compactors": [
         "Herrera\\Box\\Compactor\\Json",
         "Herrera\\Box\\Compactor\\Php"
     ],
     "directories": ["src"],
     "finder": [
-        {
-            "name": "*.php",
-            "exclude": [
-                ".gitignore",
-                ".md",
-                "phpunit",
-                "Tester",
-                "Tests",
-                "tests"
-            ],
-            "in": "vendor"
-        }
+    {
+        "exclude": [
+            "phpunit",
+            "Tester",
+            "Tests",
+            "tests",
+            "doc",
+            "docs",
+            "vendor-bin"
+        ],
+        "in": "vendor"
+    }
     ],
+    "dump-autoload": true,
     "compression": "GZ",
     "chmod": "0755",
     "main": "bin/console-phar-example",
