--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=7.0.8",
-        "symfony/console": "^3.4|^4.0"
+        "symfony/console": "^3.4|^4.0",
+        "composer/xdebug-handler": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5|^7.3",
